// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RestaurantCard Component renders snapshot for closed restaurant with overlay correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#F1F5F9",
        "borderRadius": 16,
        "borderWidth": 1,
        "elevation": 3,
        "marginBottom": 16,
        "overflow": "hidden",
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 8,
      },
      false,
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#F8FAFC",
        "height": 160,
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <Image
      resizeMode="cover"
      source={
        {
          "uri": "https://example.com/pizza.jpg",
        }
      }
      style={
        {
          "height": "100%",
          "width": "100%",
        }
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgba(15, 23, 42, 0.6)",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <Text
        style={
          {
            "color": "#FFFFFF",
            "fontSize": 16,
            "fontWeight": "600",
            "letterSpacing": 0.5,
          }
        }
      >
        Closed
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "padding": 14,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
            "marginRight": 12,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#0F172A",
              "fontSize": 17,
              "fontWeight": "700",
              "marginBottom": 4,
            }
          }
        >
          Closed Trattoria
        </Text>
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#64748B",
              "fontSize": 14,
            }
          }
        >
          Homemade Italian delicacies
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignSelf": "flex-start",
              "borderRadius": 6,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            {
              "backgroundColor": "#E0F2FE",
            },
            {
              "borderRadius": 6,
              "paddingHorizontal": 10,
              "paddingVertical": 6,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 12,
                "fontWeight": "600",
              },
              {
                "color": "#0284C7",
              },
              {
                "fontSize": 12,
                "fontWeight": "700",
              },
            ]
          }
        >
          30-40 min
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "borderTopColor": "#F1F5F9",
          "borderTopWidth": 1,
          "flexDirection": "row",
          "gap": 16,
          "marginTop": 12,
          "paddingTop": 10,
        }
      }
    >
      <Text
        style={
          {
            "color": "#475569",
            "fontSize": 13,
            "fontWeight": "600",
          }
        }
      >
        🚲 
        €2.90
      </Text>
      <Text
        style={
          {
            "color": "#475569",
            "fontSize": 13,
            "fontWeight": "600",
          }
        }
      >
        😊 
        8.8
      </Text>
    </View>
  </View>
</View>
`;

exports[`RestaurantCard Component renders snapshot for open restaurant correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#F1F5F9",
        "borderRadius": 16,
        "borderWidth": 1,
        "elevation": 3,
        "marginBottom": 16,
        "overflow": "hidden",
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 8,
      },
      false,
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#F8FAFC",
        "height": 160,
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <Image
      resizeMode="cover"
      source={
        {
          "uri": "https://example.com/pizza.jpg",
        }
      }
      style={
        {
          "height": "100%",
          "width": "100%",
        }
      }
    />
  </View>
  <View
    style={
      {
        "padding": 14,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
            "marginRight": 12,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#0F172A",
              "fontSize": 17,
              "fontWeight": "700",
              "marginBottom": 4,
            }
          }
        >
          Ristorante Pizzeria Roma
        </Text>
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#64748B",
              "fontSize": 14,
            }
          }
        >
          Homemade Italian delicacies
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignSelf": "flex-start",
              "borderRadius": 6,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            {
              "backgroundColor": "#E0F2FE",
            },
            {
              "borderRadius": 6,
              "paddingHorizontal": 10,
              "paddingVertical": 6,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 12,
                "fontWeight": "600",
              },
              {
                "color": "#0284C7",
              },
              {
                "fontSize": 12,
                "fontWeight": "700",
              },
            ]
          }
        >
          30-40 min
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "borderTopColor": "#F1F5F9",
          "borderTopWidth": 1,
          "flexDirection": "row",
          "gap": 16,
          "marginTop": 12,
          "paddingTop": 10,
        }
      }
    >
      <Text
        style={
          {
            "color": "#475569",
            "fontSize": 13,
            "fontWeight": "600",
          }
        }
      >
        🚲 
        €2.90
      </Text>
      <Text
        style={
          {
            "color": "#475569",
            "fontSize": 13,
            "fontWeight": "600",
          }
        }
      >
        😊 
        8.8
      </Text>
    </View>
  </View>
</View>
`;
